--- a/src/language/en.json
+++ b/src/language/en.json
@@ -11,8 +11,8 @@
 
 
     "greeting": "Hello",
-    "name": "I am Aamrah",
-    "rol": "Full-stack developer",
+    "name": "My name is Aamrah",
+    "rol": "I am a Full-Stack Developer",
 
 
     "im": "who am I",
